--- a/endereco/pom.xml
+++ b/endereco/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>com.pmrodrigues</artifactId>
         <groupId>com.pmrodrigues</groupId>
-        <version>1.0</version>
+        <version>1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -26,6 +26,12 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.pmrodrigues</groupId>
+            <artifactId>vraptor-crud</artifactId>
+            <version>1.1</version>
         </dependency>
 
     </dependencies>
