--- a/pessoa/pom.xml
+++ b/pessoa/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>com.pmrodrigues</artifactId>
         <groupId>com.pmrodrigues</groupId>
-        <version>1.0</version>
+        <version>1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -99,6 +99,13 @@
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.pmrodrigues</groupId>
+            <artifactId>vraptor-crud</artifactId>
+            <version>1.1</version>
+        </dependency>
+
 
     </dependencies>
 
