--- a/sisgns/src/main/webapp/WEB-INF/web.xml
+++ b/sisgns/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,16 @@
     <context-param>
         <param-name>br.com.caelum.vraptor.packages</param-name>
         <param-value>
-            com.pmrodrigues.vraptor.crud,com.pmrodrigues.vraptor.crud.controllers,com.pmrodrigues.vraptor.crud.converters,com.pmrodrigues.vraptor.crud.resolvers,com.pmrodrigues.vraptor.crud.resolvers.crud
+            com.pmrodrigues.vraptor.crud,
+            com.pmrodrigues.vraptor.crud.controllers,
+            com.pmrodrigues.vraptor.crud.converters,
+            com.pmrodrigues.vraptor.crud.resolvers,
+            com.pmrodrigues.vraptor.crud.resolvers.crud,
+            com.pmrodrigues.endereco,
+            com.pmrodrigues.endereco.controllers,
+            com.pmrodrigues.endereco.converters,
+            com.pmrodrigues.pessoa,
+            com.pmrodrigues.pessoa.converters
         </param-value>
     </context-param>
     <context-param>
@@ -30,30 +39,6 @@
         <servlet-name>TilesDispatchServlet</servlet-name>
         <url-pattern>*.do</url-pattern>
     </servlet-mapping>
-
-    <servlet>
-        <servlet-name>boletos-v2</servlet-name>
-        <servlet-class>
-            com.sun.xml.ws.transport.http.servlet.WSSpringServlet
-        </servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>boletos-v1</servlet-name>
-        <servlet-class>
-            com.sun.xml.ws.transport.http.servlet.WSSpringServlet
-        </servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>boletos-v2</servlet-name>
-        <url-pattern>/v2/boletos.svc</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>boletos-v1</servlet-name>
-        <url-pattern>/v1/boletos.svc</url-pattern>
-    </servlet-mapping>
-
 
     <filter>
         <filter-name>OpenSessionInViewFilter</filter-name>
@@ -108,15 +93,10 @@
     <listener>
         <listener-class>org.apache.tiles.extras.complete.CompleteAutoloadTilesListener</listener-class>
     </listener>
-    <listener>
-        <listener-class>
-            com.sun.xml.ws.transport.http.servlet.WSServletContextListener
-        </listener-class>
-    </listener>
 
     <resource-ref>
         <description>Boletos SA Datasource</description>
-        <res-ref-name>jdbc/boletoDS</res-ref-name>
+        <res-ref-name>jdbc/sisgnsDS</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
