cadastro de administradora de plano de saude e cadastro de operadora de saude

--- a/pom.xml
+++ b/pom.xml
@@ -513,6 +513,9 @@
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+                    <compilerArgument>
+                        -g
+                    </compilerArgument>
                 </configuration>
             </plugin>
 
