--- a/pageobjects/pom.xml
+++ b/pageobjects/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>selenium-chrome-driver</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-support</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
         </dependency>
