--- a/sisgns/pom.xml
+++ b/sisgns/pom.xml
@@ -355,6 +355,17 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
