--- a/vraptor-crud/src/main/resources/route.properties
+++ b/vraptor-crud/src/main/resources/route.properties
@@ -2,5 +2,5 @@ index=/%s/index.do
 formulario=/%s/novo.do
 salvar=/%s/salvar.do
 search=/%s/pesquisar.do
-delete=/%s/{id}/excluir.do
+delete=/%s/excluir.do
 show=/%s/{id}/abrir.do
