--- a/sisgns/pom.xml
+++ b/sisgns/pom.xml
@@ -364,6 +364,10 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
 
 
     </dependencies>
